Bug 124756 - Media objects do not trigger effects.
Summary: Media objects do not trigger effects.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.3.0 target:6.2.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2019-04-15 14:44 UTC by Mark Hung
Modified: 2021-01-08 20:49 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Interaction with media object. (480.04 KB, application/vnd.oasis.opendocument.presentation)
2019-04-15 14:44 UTC, Mark Hung
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mark Hung 2019-04-15 14:44:13 UTC
Description:
Original issue is tdf#123653. While the symptoms are the same, the original causes have been fixed. This is used to track the regression caused by 3e0092031b73bad107e3122d5d4be2f5bd487744 .



Steps to Reproduce:
1. Open the attached file.
2. Click on the media object.


Actual Results:
no response to clicking.

Expected Results:
the smiley object flies out.


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Mark Hung 2019-04-15 14:44:55 UTC
Created attachment 150770 [details]
Interaction with media object.
Comment 2 Mark Hung 2019-04-15 14:49:18 UTC

Steps to Reproduce should be:
1. Open the attached file.
2. Start presentation.
3. Click on the media object.
Comment 3 Miklos Vajna 2019-04-15 15:13:10 UTC
Confirmed. Root cause seems to be that some vcl::Window paint idle is executed in a way that it instantly re-schedules itself. The ugly solution is to just not process idles in the non-GL case, a better one would be to find out why that paint idle is re-scheduled again and again (only in case a media object is on the slide, not otherwise).

I'll take a look.
Comment 4 Xisco Faulí 2019-04-16 10:17:24 UTC
setting as regression
Comment 5 Commit Notification 2019-04-17 13:45:43 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/d7f4f5650dd2c7fe1ccec50efd806e695b8bc18a%5E%21

tdf#124756 slideshow: avoid mbPaintDisabled for media windows

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2019-04-23 08:35:15 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/5c5eab3522368d6baa7ab6ef1b6c9f5eaaab4fad%5E%21

tdf#124756 slideshow: avoid mbPaintDisabled for media windows

It will be available in 6.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.